--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     overflow-x: hidden;
     
@@ -40,7 +44,7 @@ body{
     width: 500px;
 }
 
-.getStartedBtn
+.learnMoreBtn
 {
     height: 50px;
     width: 150px; 
@@ -56,7 +60,7 @@ body{
 
 }
 
-.getStartedBtn:hover
+.learnMoreBtn:hover
 {
     background-color: rgb(0, 255, 191);
 
@@ -85,5 +89,18 @@ body{
 {
     font-size: 25px;
     color: white;
+}
+
+.getStartedBtn
+{
+    height: 50px;
+    width: 150px; 
+    color: rgb(0, 255, 191);;
+    font-weight: 500;
+    border: none;
+    border-radius: 10px;
+    background-color: transparent;
+    border-color: rgb(88, 114, 107);
+    transition: background-color 0.5s ease-in-out, transform 0.3s ease-in-out;
 }
 
