--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,7 +16,6 @@ body{
 .headerBackground
 {
     background-color: #400072;
-    height: 600px;
 }
 
 
@@ -172,3 +171,35 @@ p{
     font-weight: 500px;
     color: rgb(207, 207, 207);
 }
+
+.header-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+    align-items: center;
+    /* margin: auto; */
+    height: 100%;
+}
+
+.right {
+    text-align: center;
+}
+
+.download-btns {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 10px;
+  }
+
+
+header
+{
+    overflow: hidden;
+    display: block;
+    
+    min-width: 100% !important;
+    min-height: 50% !important;
+}
+
+
+
