--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -201,5 +201,59 @@ header
     min-height: 50% !important;
 }
 
+.features-pg-1
+{
+    height: 700px;
+    background-color: #f0f2f4;
+}
+
+.featureTitles
+{
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.featureCaptions
+{
+    top: 50%;
+    bottom: 20%;
+    font-size: 20px;
+    font-weight: 500;
+    color: rgb(136, 136, 136);
+}
+
+.learnMoreBtn1
+{
+    border: 2px solid black;
+    font-size: 20px;
+    height: 50px;
+    width: 150px;
+    border-radius: 10px;
+    color: black;
+    transition: border 0.5s ease-in-out, transform 0.3s ease-in-out, color 0.5s ease-in-out;
+}
+
+.learnMoreBtn1:hover
+{
+    border: 2px solid #9e59f2;
+    font-size: 20px;
+    height: 50px;
+    width: 150px;
+    border-radius: 10px;
+    color: #9e59f2;
+}
+
+.learnMoreBtn1:focus, input:focus{
+    outline: none;
+}
+
+.pricingOption-btn
+{
+    height: 50px;
+    width: 100px;
+    background-color: white;
+    color: blueviolet;
+}
+
 
 
