--- a/views/signup.html
+++ b/views/signup.html
@@ -77,7 +77,7 @@
 
                     </div>
                     <div class="wrap-input100 validate-input">
-                        <input class="input100" type="password" name="pass" id="passInputRepeat">
+                        <input class="input100" type="password" name="pass2" id="passInputRepeat">
                         <span class="focus-input100"></span>
                     </div>
                     <p style="color: red; font-size: 15px; font-family: 'Roboto', sans-serif; display: hidden;
