--- a/views/signup.html
+++ b/views/signup.html
@@ -120,6 +120,7 @@
             firebase.auth().signInWithPopup(base_provider).then(function (result) {
                 console.log(result);
                 console.log("Success, Google Account Linked")
+                window.location = "../views/layouts/dashboard.html"
             }).catch(function (err) {
                 console.log(err)
                 console.log("Google Sign In Failed")
@@ -151,7 +152,7 @@
         });
 
         firebase.auth().onAuthStateChanged(firebaseUser => {
-            if (firebaseUser) {
+            if (firebase) {
                 console.log(firebase);
                 window.location = "../views/layouts/dashboard.html"
             } else {
