--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -7,8 +7,12 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="../../CSS/dashboardstyles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"></head>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+</head>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 <body>
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
@@ -50,7 +54,7 @@
                         Contact Support
                     </li>
 
-                    
+
                 </ul>
 
 
@@ -67,9 +71,10 @@
         <li>
             <!--Right Section-->
             <div class="rightBar23">
-                <h2 class="logout">Logout</h2>
-                <div class="profilepic" style="background-color: grey; height: 200px; width: 200px; border-radius: 400px;">
-                    
+                <h2 class="logout" id="btnLogout">Logout</h2>
+                <div class="profilepic"
+                    style="background-color: grey; height: 200px; width: 200px; border-radius: 400px;">
+
 
                 </div>
                 <h2 class="profile-name">
@@ -101,7 +106,13 @@
 
 
         btnLogout.addEventListener('click', e => {
-            firebase.auth().signOut();
+            firebase.auth().signOut().then(function () {
+                // Sign-out successful.
+                window.location = "../login.html"
+            }).catch(function (error) {
+                // An error happened.
+                console.log("An error with signout has occured")
+            });
 
         });
 
@@ -114,12 +125,11 @@
         }
 
 
-        
+
 
 
     </script>
 
-    
 </body>
 
 </html>
