--- a/CSS/dashboardstyles.css
+++ b/CSS/dashboardstyles.css
@@ -19,14 +19,14 @@ body{
 }
 
 .center{
-    height: 1500px;
+    height: 2000px;
     width: 1435px;
     background-color: rgba(255, 255, 255, 0);
-    margin-top: -50px;
+    margin-top: -60px;
     background-color: rgb(236, 234, 230);
 }
 
-.rightBar {
+.rightBar23 {
     height: 1000px;
     width: 420px;
     background-color: rgb(255, 255, 255);
@@ -67,7 +67,7 @@ body{
 }
 
 .logout {
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 30px;
     font-size: 20px;
     transition: color 0.3s ease-in-out;
@@ -83,12 +83,147 @@ body{
 }
 
 .profile-name {
-    margin-left: 110px;
+    margin-left: 100px;
     font-weight: 300;
+    margin-top: 20px;
 }
 
 .upcomingevents{
     margin-left: 30px;
     margin-top: 50px;
     font-size: 20px;
+}
+
+.title{
+    margin-left: 300px;
+    padding-top: 80px;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.welcome-back {
+    background-color: rgba(109, 50, 204, 0.288);
+    height: 200px;
+    margin-top: 50px;
+    width: 1100px;
+    margin-left: 290px;
+    border-radius: 10px;
+    Box-shadow:0 10px 20px #d6d6d6, 0 22px 32px rgba(71, 69, 69, 0.23); border-radius: 10px;
+
+}
+
+.welcome {
+    font-size: 30px;
+    padding-top: 20px;
+    padding-left: 30px;
+    color: rgba(57, 0, 131, 0.432);
+}
+
+.welcome-text {
+    font-size: 20px;
+    padding-left: 30px;
+    margin-top: 30px;
+    color: rgba(37, 0, 85, 0.555);
+}
+
+.buisness-vector {
+    width: 400px;
+    margin-left: 600px;
+    margin-top: -206px;
+}
+
+.chart1 {
+    height: 400px;
+    width: 600px;
+    background-color: white;
+    margin-left: 260px;
+    margin-top: 100px;
+    Box-shadow:0 10px 20px #d6d6d6, 0 22px 32px rgba(71, 69, 69, 0.23); border-radius: 10px;
+
+}
+
+.chart2{
+    height: 400px;
+    width: 440px;
+    background-color: white;
+    margin-left: 40px;
+    margin-top: 100px;
+    Box-shadow:0 10px 20px #d6d6d6, 0 22px 32px rgba(71, 69, 69, 0.23); border-radius: 10px;
+
+}
+
+.charts {
+    display: flex;
+    list-style-type: none;
+}
+
+.yourHackathons {
+    margin-left: 300px;
+    margin-top: 50px;
+    font-weight: bold;
+}
+
+.grid-layout {
+    height: 800px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    grid-auto-rows: minmax(100px, auto);
+    padding-left: 320px;
+    padding-top: 30px;
+
+}
+
+.hackathon {
+    height: 200px;
+    width: 500px;
+    background-color: white;
+    background-color: rgba(121, 179, 255, 0.685);
+    Box-shadow:0 10px 20px #d6d6d6, 0 22px 32px rgba(71, 69, 69, 0.23); border-radius: 10px;
+
+}
+
+.hack-title {
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.hack-des {
+    width: 240px;
+    margin-left: 20px;
+}
+
+.hack-img {
+    width: 230px;
+    height: 200px;
+    margin-left: 270px;
+    margin-top: -120px;
+    border-radius: 10px;
+}
+
+.event {
+    height: 80px;
+    width: 360px;
+    Box-shadow:0 10px 20px #dad8d8, 0 22px 32px rgba(100, 100, 100, 0.23); border-radius: 10px;
+
+
+}
+
+.events {
+    margin-top: 50px;
+    list-style-type: none;
+}
+
+.upcoming-title {
+    font-size: 20px;
+    margin-left: 20px;
+    padding-top: 10px;
+}
+
+.upcoming-data {
+    margin-left: 20px;
+}
+
+.eventsli {
+    margin-top: 30px;
 }
