--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="../../CSS/dashboardstyles.css">
     <link
@@ -13,7 +13,6 @@
 </head>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
 <body>
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
@@ -64,14 +63,170 @@
             <!--Middle Section-->
             <div id="centerContent" class="center">
 
+                <h1 class="title">Dashboard</h1>
+                <div class="welcome-back">
+                    <h1 class="welcome">Welcome Back Shabd</h1>
+                    <h3 class="welcome-text">Welcome to your dashboard.<br>  View all your options here!</h3>
+                    <img src="/Assets/buisnessasset.png" alt="" class="buisness-vector">
+
+                </div>
+
+                <ul class="chart title" style="list-style-type: none; display: flex; margin-left: 380px;">
+                    <li>
+                        <h2>
+                            Hackathon Attendance
+                        </h2>
+
+                    </li>
+                    <li>
+                        <div style="width: 300px;">
+
+                        </div>
+                    </li>
+                    <li>
+                        <h2>
+                            Attendee Data
+                        </h2>
+                    </li>
+                </ul>
+                
+                <ul class="charts">
+                    <li class="chartli">
+                        <div class="chart1">
+                            <canvas id="myChart" width="380" height="240" style="padding-top: 30px;"></canvas>
+
+                        </div>
+                    </li>
+
+                    <li class="chartli">
+                        <div class="chart2">
+                            <canvas id="myChart2" width="380" height="330"></canvas>
+
+                        </div>
+                    </li>
+
+                </ul>
+
+                <h2 class="yourHackathons">
+                    Your Hackathons
+                </h2>
+
+                <div class="grid-layout">
+                    <div class="hackathon">
+                        <h2 class="hack-title">
+                            DubHacks
+                        </h2>
+                        <p class="hack-des">
+                            Lorem Ispum Hackathon description goes here
+                        </p>
+                        <div class="hack-img" style="background-image: url(https://media.blogto.com/articles/2019918-google.jpg?w=2048&cmd=resize_then_crop&height=1365&quality=70);">
+
+                        </div>
+
+                    </div>
+                    <div class="hackathon">
+                        <h2 class="hack-title">
+                            SRCHacks
+                        </h2>
+                        <p class="hack-des">
+                            Lorem Ispum Hackathon description goes here
+                        </p>
+                        <div class="hack-img" style="background-image: url(https://res.cloudinary.com/makeschool/image/upload/t_hero/v1/Homepage/building.jpg);">
+
+                        </div>
+
+                    </div>
+                    
+                    
+
+                </div>
+
 
             </div>
+            <script>
+                var ctx = document.getElementById('myChart').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                        datasets: [{
+                            label: '# of Votes',
+                            data: [12, 19, 3, 5, 2, 3],
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                });
+                </script>
+                <script>
+                    var ctx = document.getElementById('myChart2').getContext('2d');
+                    var myChart = new Chart(ctx, {
+                        type: 'line',
+                        data: {
+                            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                            datasets: [{
+                                label: '# of Votes',
+                                data: [12, 19, 3, 5, 2, 3],
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(255, 206, 86, 0.2)',
+                                    'rgba(75, 192, 192, 0.2)',
+                                    'rgba(153, 102, 255, 0.2)',
+                                    'rgba(255, 159, 64, 0.2)'
+                                ],
+                                borderColor: [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)'
+                                ],
+                                borderWidth: 1
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }]
+                            }
+                        }
+                    });
+                    </script>
 
         </li>
         <li>
             <!--Right Section-->
             <div class="rightBar23">
-                <h2 class="logout" id="btnLogout">Logout</h2>
+                <h2 class="logout" id="btnLogout" onclick="signOut()">Logout</h2>
                 <div class="profilepic"
                     style="background-color: grey; height: 200px; width: 200px; border-radius: 400px;">
 
@@ -83,6 +238,46 @@
                 <h2 class="upcomingevents">
                     Upcoming Events
                 </h2>
+
+                <ul class="events">
+                    <li class="eventsli">
+                        <div class="event">
+                            <h3 class="upcoming-title">
+                                Procura Hacks
+                            </h3>
+                            <p class="upcoming-data">
+                                February 28, 2021
+
+                            </p>
+
+                        </div>
+                    </li>
+                    <li class="eventsli">
+                        <div class="event">
+                            <h3 class="upcoming-title">
+                                Procura Hacks
+                            </h3>
+                            <p class="upcoming-data">
+                                February 28, 2021
+
+                            </p>
+
+                        </div>
+                    </li>
+                    <li class="eventsli">
+                        <div class="event">
+                            <h3 class="upcoming-title">
+                                Procura Hacks
+                            </h3>
+                            <p class="upcoming-data">
+                                February 28, 2021
+
+                            </p>
+
+                        </div>
+                    </li>
+
+                </ul>
 
 
 
@@ -105,7 +300,7 @@
         const btnLogout = document.getElementById("btnLogout").value;
 
 
-        btnLogout.addEventListener('click', e => {
+        function signOut() {
             firebase.auth().signOut().then(function () {
                 // Sign-out successful.
                 window.location = "../login.html"
@@ -113,8 +308,7 @@
                 // An error happened.
                 console.log("An error with signout has occured")
             });
-
-        });
+        }
 
         function loadDashboard() {
             document.getElementById('centerContent').innerHTML += "<h1>HELOOO</h1>";
