--- a/views/login.html
+++ b/views/login.html
@@ -65,8 +65,8 @@
 						<input class="input100" type="password" name="pass">
 						<span class="focus-input100"></span>
 					</div>
-					<div class="alert alert-danger" role="alert" id="alert"
-						style="margin-top: 20px; width: 600px; "><strong>Oops!</strong>Email and Password
+					<div class="alert alert-danger" role="alert" id="alert" style="margin-top: 20px; width: 600px; ">
+						<strong>Oops!</strong>Email and Password
 						dont Match</div>
 
 
@@ -92,17 +92,17 @@
 
 
 	<div id="dropDownSelect1"></div>
-<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+	<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
+	<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
 
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
+	<!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+	<script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
 
-    <!-- Add Firebase products that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
+	<!-- Add Firebase products that you want to use -->
+	<script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
 
 
 	<script>
@@ -123,8 +123,15 @@
 			base_provider = new firebase.auth.GoogleAuthProvider();
 			firebase.auth().signInWithPopup(base_provider).then(function (result) {
 				console.log(result);
-				console.log("Success, Google Account Linked")
-				window.location = "../views/layouts/dashboard.html"
+				console.log("Success, Google Account Linked");
+				window.location = "../views/layouts/dashboard.html";
+				var user = result.user;
+				var email = user.email;
+				var formattedEmail = email.replace(/email/g, ".", "-");
+				console.log(formattedEmail);
+
+				localStorage.setItem("email", email);
+
 
 			}).catch(function (err) {
 				console.log(err)
@@ -134,11 +141,15 @@
 
 		}
 
+		
+
 		const txtEmail = document.getElementById("emailInput");
 		const txtPassword = document.getElementById("passInput");
 		const btnSignIn = document.getElementById("btnSignIn");
 
 		//Add login event
+
+
 
 
 		btnSignIn.addEventListener('click', e => {
@@ -148,19 +159,21 @@
 
 			const promise = auth.signInWithEmailAndPassword(email, pass);
 			promise
-			
-				.catch(e => console.log(e.message),document.getElementById("alert").style.display = "none" );
+
+				.catch(e => console.log(e.message), document.getElementById("alert").style.display = "none");
 
 		});
 
+
+
 		firebase.auth().onAuthStateChanged(firebaseUser => {
-            if (firebaseUser) {
-                console.log(firebaseUser);
-                window.location = "../views/layouts/dashboard.html"
-            } else {
-                console.log('not logged in')
-            }
-        })
+			if (firebaseUser) {
+				console.log(firebaseUser);
+				window.location = "../views/layouts/dashboard.html"
+			} else {
+				console.log('not logged in')
+			}
+		})
 
 
 	</script>
