--- a/views/signup.html
+++ b/views/signup.html
@@ -16,17 +16,7 @@
 </head>
 
 <body>
-    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
-
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
-
-    <!-- Add Firebase products that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
+    
 
 
     <div class="limiter">
@@ -55,6 +45,15 @@
                     </div>
                     <div class="wrap-input100 validate-input">
                         <input class="input100" type="text" id="emailInput">
+                        <span class="focus-input100"></span>
+                    </div>
+                    <div class="p-t-31 p-b-9">
+                        <span class="txt1">
+                            Name
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input">
+                        <input class="input100" type="text" id="nameInput">
                         <span class="focus-input100"></span>
                     </div>
 
@@ -99,7 +98,17 @@
     <div id="dropDownSelect1"></div>
 
 
+<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
+
+    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
 
     <script>
         var firebaseConfig = {
@@ -120,7 +129,6 @@
             firebase.auth().signInWithPopup(base_provider).then(function (result) {
                 console.log(result);
                 console.log("Success, Google Account Linked")
-                window.location = "../views/layouts/dashboard.html"
             }).catch(function (err) {
                 console.log(err)
                 console.log("Google Sign In Failed")
@@ -131,30 +139,56 @@
 
 
 
-        const txtEmail = document.getElementById("emailInput");
-        const txtPassword = document.getElementById("passInput");
-        const btnSignUp = document.getElementById("btnSignUp");
-        const txtRepeat = document.getElementById("passInputRepeat")
+        const txtEmail = document.getElementById("emailInput").value;
+        const txtPassword = document.getElementById("passInput").value;
+        const btnSignUp = document.getElementById("btnSignUp").value;
+        const txtRepeat = document.getElementById("passInputRepeat").value;
+        const txtName = document.getElementById("nameInput").value;
+
+        function replaceAll(str, find, replace) {
+            return str.replace(new RegExp(find, 'g'), replace);
+
+        }
 
         //Add login event
 
 
         btnSignUp.addEventListener('click', e => {
-            const email = txtEmail.value;
-            const pass = txtPassword.value;
-            const auth = firebase.auth();
+			const email = txtEmail.value;
+			const pass = txtPassword.value;
+			const auth = firebase.auth();
+
+			const promise = auth.createUserWithEmailAndPassword(email, pass);
+			promise
+			
+				.catch(e => console.log(e.message), );
+
+		});
+
+        function writeUserData(txtEmail, txtName, txtPassword, imageUrl) {
+
+            var formattedEmail = replaceAll(/txtEmail/g, ".", "-");
 
 
-            const promise = auth.createUserWithEmailAndPassword(email, pass);
-            promise
-                .catch(e => console.log(e.message));
+            var _ref = firebase.database().ref().child("UserData").child(formattedEmail);
 
-        });
+            _ref.child("display name").set(txtName);
+            _ref.child("email").set(txtEmail);
+            _ref.child("password").set(txtPassword);
+            _ref.child("username").set(formattedEmail);
+
+
+
+
+        }
+
+
 
         firebase.auth().onAuthStateChanged(firebaseUser => {
             if (firebase) {
                 console.log(firebase);
-                window.location = "../views/layouts/dashboard.html"
+                writeUserData();
+
             } else {
                 console.log('not logged in')
             }
@@ -167,7 +201,7 @@
     </script>
 
 
-<link rel="stylesheet" href="../views/layouts/dashboard.html">
+    <link rel="stylesheet" href="../views/layouts/dashboard.html">
 </body>
 
 </html>
