--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -25,6 +25,7 @@
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
+    <script src="../../Js/auth.js"></script>
     <ul style="display: flex;" class="sections">
         <li>
             <!-- Left Section-->
