--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -311,8 +311,8 @@
             });
         }
 
-        var email = localStorage.get("email");
-        document.getElementById("userEmail").innerHTML = email;
+        var email3 = localStorage.get("email");
+        document.getElementById("userEmail").innerHTML = email3;
 
 
 
