--- a/views/signup.html
+++ b/views/signup.html
@@ -124,12 +124,27 @@
         };
         firebase.initializeApp(firebaseConfig);
 
+        const txtEmail = document.getElementById("emailInput").value;
+        const txtPassword = document.getElementById("passInput").value;
+        const btnSignUp = document.getElementById("btnSignUp").value;
+        const txtRepeat = document.getElementById("passInputRepeat").value;
+        const txtName = document.getElementById("nameInput").value;
+
 
         googleSignIn = () => {
             base_provider = new firebase.auth.GoogleAuthProvider();
             firebase.auth().signInWithPopup(base_provider).then(function (result) {
                 console.log(result);
-                console.log("Success, Google Account Linked")
+                console.log("Success, Google Account Linked");
+                var user = result.user;
+                var email = user.email;
+                var formattedEmail1 = email.replace(".", "-");
+                var _ref = firebase.database().ref().child("UserData").child(formattedEmail1);
+
+                _ref.child("display name").set(txtName);
+                _ref.child("email").set(txtEmail);
+                _red.child("username").set(formattedEmail1);
+                
             }).catch(function (err) {
                 console.log(err)
                 console.log("Google Sign In Failed")
@@ -140,13 +155,9 @@
 
 
 
-        const txtEmail = document.getElementById("emailInput").value;
-        const txtPassword = document.getElementById("passInput").value;
-        const btnSignUp = document.getElementById("btnSignUp").value;
-        const txtRepeat = document.getElementById("passInputRepeat").value;
-        const txtName = document.getElementById("nameInput").value;
-
         
+
+
 
         //Add login event
 
@@ -162,7 +173,7 @@
                 // ...
             });
 
-            
+
         }
 
         firebase.auth().onAuthStateChanged(firebaseUser => {
@@ -175,7 +186,7 @@
             }
         })
 
-        
+
 
 
 
