--- a/views/signup.html
+++ b/views/signup.html
@@ -138,11 +138,12 @@
                 console.log("Success, Google Account Linked");
                 var user = result.user;
                 var email = user.email;
+                var name = user.name;
                 var formattedEmail1 = email.replace(".", "-");
                 var _ref = firebase.database().ref().child("UserData").child(formattedEmail1);
 
-                _ref.child("display name").set(txtName);
-                _ref.child("email").set(txtEmail);
+                _ref.child("display name").set(name);
+                _ref.child("email").set(email);
                 _red.child("username").set(formattedEmail1);
                 
             }).catch(function (err) {
