--- a/views/signup.html
+++ b/views/signup.html
@@ -141,7 +141,8 @@
                 var name = user.name;
                 var formattedEmail1 = email.replace(".", "-");
                 var _ref = firebase.database().ref().child("UserData").child(formattedEmail1);
-
+                console.log(email);
+                console.log(name);
                 _ref.child("display name").set(name);
                 _ref.child("email").set(email);
                 _red.child("username").set(formattedEmail1);
