--- a/views/signup.html
+++ b/views/signup.html
@@ -142,10 +142,10 @@
                 var formattedEmail1 = email.replace(".", "-");
                 var _ref = firebase.database().ref().child("UserData").child(formattedEmail1);
                 console.log(email);
-                console.log(name);
+                console.log(txtName);
                 _ref.child("display name").set(txtName);
                 _ref.child("email").set(email);
-                _red.child("username").set(formattedEmail1);
+                _ref.child("username").set(formattedEmail1);
                 
             }).catch(function (err) {
                 console.log(err)
