--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -313,7 +313,7 @@
         var emailUser = localStorage.getItem("emailOfUser")
 
         var userId = firebase.auth().currentUser.displayName;
-        return firebase.database().ref('/UserData' + emailOfUser + displayName).once('value').then(function(snapshot) {
+        return firebase.database().ref('/UserData/' + /emailOfUser/ + displayName).once('value').then(function(snapshot) {
             var username = (snapshot.val() && snapshot.val().username) || 'Anonymous';
         })
 
