--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -10,10 +10,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <script src="/Js/auth.js"></script>
+
 </head>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<body>
+
+
+
+<body onload="getName()">
+
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
@@ -25,7 +31,37 @@
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
-    <script src="../../Js/auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase.js"></script>
+    <script src="../Js/authSignUp.js"></script>
+    <script src="/Js/auth.js"></script>
+
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyDZ9pYHurpHjpI33InoBi2ZJT_Fdu2Z10w",
+            authDomain: "hackerqmobile-newdatabase.firebaseapp.com",
+            databaseURL: "https://hackerqmobile-newdatabase.firebaseio.com/",
+            projectId: "hackerqmobile-newdatabase",
+            storageBucket: "hackerqmobile-newdatabase.appspot.com",
+            messagingSenderId: "462903816679",
+            appId: "1:462903816679:web:aac71517826ca6f094cd42",
+            measurementId: "G-1SVWFLQ5HH"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+
+        function getName() {
+            formattedUser = localStorage.getItem("email");
+            console.log(formattedUser);
+            firebase.database().ref('UserData/' + formattedUser).once('value').then(function (snapshot) {
+                var name2 = snapshot.val().email;
+                console.log(name2);
+                document.getElementById("nameDisplay").innerHTML = name2;
+
+            });
+        };
+
+    </script>
+
     <ul style="display: flex;" class="sections">
         <li>
             <!-- Left Section-->
@@ -67,7 +103,7 @@
                 <h1 class="title">Dashboard</h1>
                 <div class="welcome-back">
                     <h1 class="welcome">Welcome Back Shabd</h1>
-                    <h3 class="welcome-text">Welcome to your dashboard.<br>  View all your options here!</h3>
+                    <h3 class="welcome-text">Welcome to your dashboard.<br> View all your options here!</h3>
                     <img src="/Assets/buisnessasset.png" alt="" class="buisness-vector">
 
                 </div>
@@ -90,7 +126,7 @@
                         </h2>
                     </li>
                 </ul>
-                
+
                 <ul class="charts">
                     <li class="chartli">
                         <div class="chart1">
@@ -120,7 +156,8 @@
                         <p class="hack-des">
                             Lorem Ispum Hackathon description goes here
                         </p>
-                        <div class="hack-img" style="background-image: url(https://media.blogto.com/articles/2019918-google.jpg?w=2048&cmd=resize_then_crop&height=1365&quality=70);">
+                        <div class="hack-img"
+                            style="background-image: url(https://media.blogto.com/articles/2019918-google.jpg?w=2048&cmd=resize_then_crop&height=1365&quality=70);">
 
                         </div>
 
@@ -132,19 +169,20 @@
                         <p class="hack-des">
                             Lorem Ispum Hackathon description goes here
                         </p>
-                        <div class="hack-img" style="background-image: url(https://res.cloudinary.com/makeschool/image/upload/t_hero/v1/Homepage/building.jpg);">
+                        <div class="hack-img"
+                            style="background-image: url(https://res.cloudinary.com/makeschool/image/upload/t_hero/v1/Homepage/building.jpg);">
 
                         </div>
 
                     </div>
-                    
-                    
+
+
 
                 </div>
 
 
             </div>
-            
+
 
         </li>
         <li>
@@ -157,7 +195,8 @@
 
                 </div>
                 <h2 class="profile-name" id="nameDisplay">
-                    
+                    Loading...
+
                 </h2>
                 <h2 class="upcomingevents">
                     Upcoming Events
@@ -208,44 +247,8 @@
             </div>
         </li>
     </ul>
-    <script>
-        var firebaseConfig = {
-            apiKey: "AIzaSyDZ9pYHurpHjpI33InoBi2ZJT_Fdu2Z10w",
-            authDomain: "hackerqmobile-newdatabase.firebaseapp.com",
-            databaseURL: "https://hackerqmobile-newdatabase.firebaseio.com/",
-            projectId: "hackerqmobile-newdatabase",
-            storageBucket: "hackerqmobile-newdatabase.appspot.com",
-            messagingSenderId: "462903816679",
-            appId: "1:462903816679:web:aac71517826ca6f094cd42",
-            measurementId: "G-1SVWFLQ5HH"
-        };
-        firebase.initializeApp(firebaseConfig);
-
-        const btnLogout = document.getElementById("btnLogout").value;
 
 
-        function signOut() {
-            firebase.auth().signOut().then(function () {
-                // Sign-out successful.
-                window.location = "../login.html"
-            }).catch(function (error) {
-                // An error happened.
-                console.log("An error with signout has occured")
-            });
-        }
-        var emailUser = localStorage.getItem("emailOfUser")
-
-        var userId = firebase.auth().currentUser.displayName;
-        return firebase.database().ref('/UserData/' + /emailOfUser/ + displayName).once('value').then(function(snapshot) {
-            var username = (snapshot.val() && snapshot.val().username) || 'Anonymous';
-        })
-
-        document.getElementById('nameDisplay').innerHTML = username;
-
-
-
-
-    </script>
     <script>
         var ctx = document.getElementById('myChart').getContext('2d');
         var myChart = new Chart(ctx, {
@@ -284,46 +287,47 @@
                 }
             }
         });
-        </script>
-        <script>
-            var ctx = document.getElementById('myChart2').getContext('2d');
-            var myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                    datasets: [{
-                        label: '# of Votes',
-                        data: [12, 19, 3, 5, 2, 3],
-                        backgroundColor: [
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 206, 86, 0.2)',
-                            'rgba(75, 192, 192, 0.2)',
-                            'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
-                        ],
-                        borderColor: [
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 206, 86, 1)',
-                            'rgba(75, 192, 192, 1)',
-                            'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
-                        ],
-                        borderWidth: 1
+    </script>
+    <script>
+        var ctx = document.getElementById('myChart2').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'pie',
+            data: {
+                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Votes',
+                    data: [12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
                     }]
-                },
-                options: {
-                    scales: {
-                        yAxes: [{
-                            ticks: {
-                                beginAtZero: true
-                            }
-                        }]
-                    }
                 }
-            });
-            </script>
+            }
+        });
+    </script>
+    
 
 </body>
 
