--- a/views/login.html
+++ b/views/login.html
@@ -39,6 +39,9 @@
 						<img src="../Assets/icon-google.png">
 						<p style="font-family: 'Roboto', sans-serif; color: black;">Google</p>
 					</a>
+					<div class="alert alert-danger" role="alert" id="alert3" style="margin-top: 20px; width: 600px; display: none;">
+						<strong>Oops! </strong>Google Login Failed
+						</div>
 
 
 
@@ -65,7 +68,7 @@
 						<input class="input100" type="password" name="pass">
 						<span class="focus-input100"></span>
 					</div>
-					<div class="alert alert-danger" role="alert" id="alert" style="margin-top: 20px; width: 600px; ">
+					<div class="alert alert-danger" role="alert" id="alert" style="margin-top: 20px; width: 600px; display: none;">
 						<strong>Oops!</strong>Email and Password
 						dont Match</div>
 
