--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
@@ -11,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <script src="/Js/auth.js"></script>
+    <script src="/Js/dynamicContent.js"></script>
 
 </head>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +20,7 @@
 
 
 
-<body onload="getName()">
+<body onload="getName(), getHackathonData()">
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
