--- a/CSS/dashboardstyles.css
+++ b/CSS/dashboardstyles.css
@@ -129,7 +129,7 @@ body{
 .buisness-vector {
     width: 400px;
     margin-left: 600px;
-    margin-top: -206px;
+    margin-top: -230px;
 }
 
 .chart1 {
@@ -166,19 +166,24 @@ body{
 .grid-layout {
     height: 800px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     grid-gap: 50px;
-    grid-auto-rows: minmax(100px, auto);
     padding-left: 320px;
     padding-top: 30px;
+    width: 500px;
 
 }
 
 .hackathon {
     height: 200px;
-    width: 500px;
+    width: 1000px;
     background-color: white;
     background-color: rgba(121, 179, 255, 0.685);
+    border-radius: 10px;
+    transition: Box-shadow 0.3s ease-in-out;
+
+}
+
+.hackathon:hover {
     Box-shadow:0 10px 20px #d6d6d6, 0 22px 32px rgba(71, 69, 69, 0.23); border-radius: 10px;
 
 }
@@ -196,8 +201,8 @@ body{
 .hack-img {
     width: 230px;
     height: 200px;
-    margin-left: 270px;
-    margin-top: -120px;
+    margin-left: 800px;
+    margin-top: -150px;
     border-radius: 10px;
 }
 
